.on-deck/apps/.media/sabnzbd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sabnzbd
  template:
    metadata:
      labels:
        app: sabnzbd
    spec:
      terminationGracePeriodSeconds: 30
      securityContext:
        fsGroup: 0
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
        - name: sabnzbd
          image: linuxserver/sabnzbd:latest
          imagePullPolicy: Always
          securityContext:
            runAsUser: 0
            runAsGroup: 0
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 1000m
              memory: 512Mi
          ports:
            - containerPort: 8080
              name: web-ui
              protocol: TCP
          volumeMounts:
            - mountPath: "/config"
              name: config
            - mountPath: /downloads
              name: downloads
            - mountPath: /media
              name: media
        - name: gluetun
          image: ghcr.io/qdm12/gluetun:v3.40
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          ports:
            - containerPort: 8888
              name: http-proxy
              protocol: TCP
            - containerPort: 9999
              name: gluetun-health
              protocol: TCP
          volumeMounts:
            - name: tunnel
              mountPath: /dev/net/tun
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sabnzbd-config
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads-ceph
        - name: media
          persistentVolumeClaim:
            claimName: nfs-media
        - name: tunnel
          hostPath:
            path: /dev/net/tun
---
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: media
spec:
  selector:
    app: sabnzbd
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: web-ui
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Media Server
    gethomepage.dev/group: Media
    gethomepage.dev/icon: sabnzbd.png
    gethomepage.dev/name: Sabnzbd
    gethomepage.dev/widget.type: "sabnzbd"
    gethomepage.dev/widget.url: "https://sabnzbd.wakkalabs.com"
  labels:
    app: sabnzbd
    app.kubernetes.io/name: sabnzbd
spec:
  ingressClassName: internal
  tls:
    - hosts:
        - sabnzbd.wakkalabs.com
      secretName: sabnzbd-tls
  rules:
    - host: sabnzbd.wakkalabs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sabnzbd
                port:
                  number: 8080
